--- a/src/app/user-data/user-data.component.html
+++ b/src/app/user-data/user-data.component.html
@@ -20,8 +20,8 @@
   aria-labelledby="example-radio-group-label"
   class="example-radio-group"
   [(ngModel)]="favoriteSeason">
-  <mat-radio-button class="example-radio-button" *ngFor="let season of seasons" [value]="season">
-    {{season}}
+  <mat-radio-button class="example-radio-button" *ngFor="let role of roles" [value]="role">
+    {{role}}
   </mat-radio-button>
 </mat-radio-group>
 
@@ -29,8 +29,8 @@
 <mat-form-field>
   <mat-label>Categoria</mat-label>
   <mat-select>
-    <mat-option *ngFor="let food of foods" [value]="food.value">
-      {{food.viewValue}}
+    <mat-option *ngFor="let category of categories" [value]="category.value">
+      {{category.viewValue}}
     </mat-option>
   </mat-select>
 </mat-form-field>
