interface users list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="primary">
     <span>Kakeboss</span>
 </mat-toolbar>
-<app-user-data></app-user-data>
+<!-- <app-user-data></app-user-data> -->
+<app-users-list></app-users-list>
