--- a/src/app/user-data/user-data.component.css
+++ b/src/app/user-data/user-data.component.css
@@ -31,3 +31,10 @@
   #image-perfil{
     width:200px;
   }
+
+  .data{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
