--- a/src/app/user-data/user-data.component.html
+++ b/src/app/user-data/user-data.component.html
@@ -1,55 +1,62 @@
 <div id="container">
 <mat-card class="example-card">
+<!--Ver como podemos incluir una imagen-->
 
 <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" id="image-perfil" alt="Photo of a Shiba Inu">
-
-<form class="example-form">
-    <mat-form-field class="example-full-width">
-      <mat-label>Name</mat-label>
-      <input matInput>
-    </mat-form-field>
+<div class="data">
+  <div class="fullname">
+    <form class="example-form">
+      <mat-form-field class="example-full-width">
+        <mat-label>Name</mat-label>
+        <input matInput>
+      </mat-form-field>
   
-    <mat-form-field class="example-full-width">
-      <mat-label>Surname</mat-label>
-      <input matInput>
+      <mat-form-field class="example-full-width">
+        <mat-label>Surname</mat-label>
+        <input matInput>
+      </mat-form-field>
+    </form>
+  </div>
+
+  <div class="roles">
+    <label id="example-radio-group-label">Role:</label>
+    <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" [(ngModel)]="chosenRole">
+      <mat-radio-button class="example-radio-button" *ngFor="let role of roles" [value]="role">
+        {{role}}
+      </mat-radio-button>
+    </mat-radio-group>
+  </div>
+
+  <div class="category">
+    <h4>Categoria</h4>
+    <mat-form-field>
+      <mat-label>Categoria</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let category of categories" [value]="category.value">
+          {{category.viewValue}}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
-  </form>
+  </div>
 
-<label id="example-radio-group-label">Role:</label>
-<mat-radio-group
-  aria-labelledby="example-radio-group-label"
-  class="example-radio-group"
-  [(ngModel)]="favoriteSeason">
-  <mat-radio-button class="example-radio-button" *ngFor="let role of roles" [value]="role">
-    {{role}}
-  </mat-radio-button>
-</mat-radio-group>
+  <div class="adidata">
+    <h4>Datos adicionales</h4>
+    <form class="example-form">
+      <mat-form-field class="example-full-width">
+        <mat-label>Datos</mat-label>
+        <textarea matInput> </textarea>
+      </mat-form-field>
+    </form>
+  </div>
 
-  <h4>Categoria</h4>
-<mat-form-field>
-  <mat-label>Categoria</mat-label>
-  <mat-select>
-    <mat-option *ngFor="let category of categories" [value]="category.value">
-      {{category.viewValue}}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+  <div class="buttons">
+    <mat-card-actions>
+      <button mat-button  color="primary">Aceptar</button>
+      <button mat-button  color="primary">Cancelar</button>
+    </mat-card-actions>
+  </div>
 
-
-<h4>Datos adicionales</h4>
-<form class="example-form">
-    <mat-form-field class="example-full-width">
-      <mat-label>Datos</mat-label>
-      <textarea matInput> </textarea>
-    </mat-form-field>
-</form>
-
-
-  <mat-card-actions>
-    <button mat-button  color="primary">Aceptar</button>
-    <button mat-button  color="primary">Cancelar</button>
-  </mat-card-actions>
-
-
+</div>
 </mat-card>
+
 </div>
