--- a/src/app/user-data/user-data.component.css
+++ b/src/app/user-data/user-data.component.css
@@ -29,12 +29,27 @@
   }
 
   #image-perfil{
-    width:200px;
+    max-width:200px;
+    height: 100%;
+    margin: 10px;
+  }
+
+  .container-info{
+    display: flex;
+    justify-content: space-evenly;
   }
 
   .data{
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
   }
 
+  .typedata{
+    display: flex;
+  }
+
+  .buttons{
+    display: flex;
+    justify-content: flex-end;
+  }
