--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<mat-toolbar color="primary">
-    <span>Kakeboss</span>
+<mat-toolbar id="mat-toolbar" color="primary">
+    <span id="title">Kakeboss</span>
+    <button mat-button  id="addUser">Añadir usuario</button>
 </mat-toolbar>
 <!-- <app-user-data></app-user-data> -->
 <app-users-list></app-users-list>
