--- a/src/app/users-list/users-list.component.css
+++ b/src/app/users-list/users-list.component.css
@@ -1,3 +1,7 @@
+#container{
+  padding: 8px 32px;
+}
+
 table {
     width: 100%;
   }
@@ -7,7 +11,25 @@ table {
     width: 100%;
   }
   
-  td, th {
-    width: 25%;
+
+  .header-row{
+    width: 100%;
+    padding: 8px;
+    display: grid;
+    grid-template-columns: 22% 22% 22% 22% 6% 6%;
+    grid-template-rows: 100%;
+    text-align: center;
+  }
+
+  .row{
+    width: 100%;
+    padding: 8px;
+    display: grid;
+    grid-template-columns: 22% 22% 22% 22% 6% 6%;
+    grid-template-rows: 100%;
+    text-align: center;
   }
   
+  .icon{
+    cursor: pointer;
+  }
