--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -1,37 +1,49 @@
-<mat-form-field>
+<div id="container">
+  <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia">
   </mat-form-field>
   
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+  
+    <table class="mat-elevation-z8" mat-table [dataSource]="dataSource" matSort>
   
       <!-- ID Column -->
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header > Nombre </th>
         <td mat-cell *matCellDef="let row"> {{row.id}} </td>
       </ng-container>
   
       <!-- Progress Column -->
       <ng-container matColumnDef="progress">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header > Aprellido </th>
         <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
       </ng-container>
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Categoria </th>
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
       </ng-container>
   
       <!-- Color Column -->
       <ng-container matColumnDef="color">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Rol </th>
         <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
       </ng-container>
   
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+  
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+        <button mat-cell mat-mini-fab color="primary" *matCellDef="let course" (click)="openDialog(course, 'delete')" ><mat-icon>delete</mat-icon></button>
+      </ng-container>
+
+      <ng-container matColumnDef="modified">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+        <button  mat-cell mat-mini-fab color="accent" *matCellDef="let course" (click)="openDialog(course, 'delete')" ><mat-icon>edit</mat-icon></button>
+      </ng-container>
+
+      <tr class="header-row" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr class="row" mat-row *matRowDef="let row; columns: displayedColumns;">
       </tr>
     </table>
   
