--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -8,38 +8,38 @@
     <table class="mat-elevation-z8" mat-table [dataSource]="dataSource" matSort>
   
       <!-- ID Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header > Nombre </th>
-        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-      </ng-container>
-  
-      <!-- Progress Column -->
-      <ng-container matColumnDef="progress">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header > Aprellido </th>
-        <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
-      </ng-container>
-  
-      <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Categoria </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
       </ng-container>
   
       <!-- Color Column -->
-      <ng-container matColumnDef="color">
+      <ng-container matColumnDef="lastname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Lastname </th>
+        <td mat-cell *matCellDef="let row"> {{row.lastname}} </td>
+      </ng-container>
+
+      <!-- Progress Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header > Category </th>
+        <td mat-cell *matCellDef="let row"> {{row.category}} </td>
+      </ng-container>
+  
+
+      <ng-container matColumnDef="rol">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Rol </th>
-        <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.rol}} </td>
       </ng-container>
   
   
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-        <button mat-cell mat-mini-fab color="primary" *matCellDef="let course" (click)="deleteUser()" ><mat-icon>delete</mat-icon></button>
+        <button mat-cell mat-mini-fab color="primary" *matCellDef="let course"><mat-icon>delete</mat-icon></button>
       </ng-container>
 
       <ng-container matColumnDef="modified">
         <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-        <button  mat-cell mat-mini-fab color="accent" *matCellDef="let course" (click)="editUser()" ><mat-icon>edit</mat-icon></button>
+        <button  mat-cell mat-mini-fab color="accent" *matCellDef="let course" ><mat-icon>edit</mat-icon></button>
       </ng-container>
 
       <tr class="header-row" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
