Switch views between list and form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<mat-toolbar id="mat-toolbar" color="primary">
-    <span id="title">Kakeboss</span>
-    <button mat-button  id="addUser" >Añadir usuario</button>
-</mat-toolbar>
-<!-- <app-user-data></app-user-data> -->
-<app-users-list></app-users-list>
+<app-users></app-users>
