--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-users></app-users>
+<mat-toolbar id="mat-toolbar" color="primary">
+  <span id="title">Kakeboss</span>
+  <button *ngIf="showList" mat-button  class="switchButton" (click)="switchButton()">Añadir usuario</button>
+  <button *ngIf="!showList" mat-button  class="switchButton" (click)="switchButton()">Ver lista de usuarios</button>
+</mat-toolbar>
+<app-users [showList]="showList"></app-users>
