--- a/src/app/component/users-list/users-list.component.html
+++ b/src/app/component/users-list/users-list.component.html
@@ -3,20 +3,20 @@
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia">
   </mat-form-field>
-  
-  
+
+
     <table class="mat-elevation-z8" mat-table [dataSource]="dataSource" matSort>
-  
+
       <!-- ID Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
       </ng-container>
-  
+
       <!-- Color Column -->
-      <ng-container matColumnDef="lastname">
+      <ng-container matColumnDef="surname">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Lastname </th>
-        <td mat-cell *matCellDef="let row"> {{row.lastname}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.surname}} </td>
       </ng-container>
 
       <!-- Progress Column -->
@@ -24,14 +24,14 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header > Category </th>
         <td mat-cell *matCellDef="let row"> {{row.category}} </td>
       </ng-container>
-  
+
 
       <ng-container matColumnDef="rol">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Rol </th>
         <td mat-cell *matCellDef="let row"> {{row.rol}} </td>
       </ng-container>
-  
-  
+
+
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
         <button mat-cell mat-mini-fab color="primary" *matCellDef="let course"><mat-icon>delete</mat-icon></button>
@@ -46,6 +46,6 @@
       <tr class="row" mat-row *matRowDef="let row; columns: displayedColumns;">
       </tr>
     </table>
-  
+
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
